styles/hatena-bookmark.less
// The ui-variables file is provided by base themes provided by Atom.
//
// See https://github.com/atom/atom-dark-ui/blob/master/styles/ui-variables.less
// for a full listing of what's available.
@import "ui-variables";

ul[is="hatena-bookmark-list"] {
  font-size: 11px;
  list-style-type: none;
  width: 400px;
  overflow: hidden;
  margin: 0;
  padding: 0;

  .bookmark {
    white-space: nowrap;
    width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
    line-height: 25px;

    border-bottom: 1px solid @base-border-color;
    position: relative;
    height: 48px;

    &.selected .title {
      color: @text-color-selected;
    }

    .bookmarked-at {
      position: absolute;
      top: 0;
      left: 0;
      padding: 4px 4px 0 4px;
      font-size: 12px;
      height: 16px;
      line-height: 16px;
      color: @text-color-ignored;
    }

    .title {
      position: absolute;
      top: 16px;
      left: 0;
      padding: 0 4px 4px 4px;
      font-size: 16px;
      height: 32px;
      line-height: 32px;
      color: @text-color;
    }
  }
}

